@@ -21,10 +21,10 @@ META.yml
 README
 t/apache.t
 t/apache_info.t
-t/bin/apxs
-t/bin/createdb
 t/bin/httpd
 t/bin/iconv
+t/bin/myapxs
+t/bin/mycreatedb
 t/bin/pg_config
 t/bin/postgres
 t/bin/sqlite3
